fix btn on small size

--- a/style.css
+++ b/style.css
@@ -70,11 +70,11 @@ img:hover{
     margin:0 ;
     background-color: aquamarine;
     font-weight: bold;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     color: #102a42;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-transform: uppercase;
-    padding: 1rem 3rem;
+    padding: 1rem;
     border: none;
     cursor: pointer;
 }
@@ -162,6 +162,10 @@ footer {
     img {
         width: 100%;
         height: 260px;
+    }
+
+    .tab-btn {
+        letter-spacing: 2px ;
     }
 
     .about {
